[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Materials/Walls/Rock035_1K_Roughness.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Glyphs/NC Front Glyph.png" type="Texture" id=2]
[ext_resource path="res://Assets/Materials/Walls/Rock035_1K_NormalGL.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/Glyphs/NC Bottom Right Glyph.png" type="Texture" id=4]
[ext_resource path="res://Assets/Glyphs/NC L Glyph.png" type="Texture" id=5]
[ext_resource path="res://Assets/Glyphs/NC Right Glyph.png" type="Texture" id=6]
[ext_resource path="res://Assets/Glyphs/NC Left Sprite.png" type="Texture" id=7]
[ext_resource path="res://Assets/Materials/Walls/Rock035_1K_Color.jpg" type="Texture" id=8]
[ext_resource path="res://Rooms/North Chamber.gd" type="Script" id=9]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 8 )
roughness_texture = ExtResource( 1 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 3 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.7, 0.3, 0.1 )

[node name="Reverse Chamber" type="Spatial"]
script = ExtResource( 9 )

[node name="CSGTorus" type="CSGTorus" parent="."]
transform = Transform( 3, 0, 0, 0, 100, 0, 0, 0, 3, 0, 1.5, 0 )
use_collision = true
inner_radius = 2.9
sides = 25
ring_sides = 10
material = SubResource( 1 )

[node name="CSGSphere" type="CSGSphere" parent="CSGTorus"]
transform = Transform( 0.5, 0, 0, 0, 0.1, 0, 0, 0, 0.5, 3, -0.07, 0 )
operation = 2
radius = 1.07808
radial_segments = 20
material = SubResource( 1 )

[node name="RNC T Sprite" type="Sprite3D" parent="CSGTorus"]
transform = Transform( -3.31421e-08, 0, 0.758203, 0, 0.0379102, 0, -0.758203, 0, -3.31421e-08, -2.85, 0.01, 0 )
texture = ExtResource( 2 )

[node name="OmniLight" type="OmniLight" parent="CSGTorus/RNC T Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
light_color = Color( 0, 1, 0.635294, 1 )
light_energy = 0.914
omni_range = 2.0
omni_attenuation = 0.164941

[node name="RNC T Sprite" type="Area" parent="CSGTorus/RNC T Sprite"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CSGTorus/RNC T Sprite/RNC T Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.19209e-07, 0, 1, -0.00277972, -0.02632, -0.0414691 )
shape = SubResource( 2 )

[node name="RNC BL Sprite" type="Sprite3D" parent="CSGTorus"]
transform = Transform( -0.519615, 0, -0.5, 0, 0.038, 0, 0.3, 0, -0.866025, 1.45, 0.01, 2.45 )
texture = ExtResource( 5 )

[node name="OmniLight" type="OmniLight" parent="CSGTorus/RNC BL Sprite"]
transform = Transform( -0.523487, 0, 0.18602, 0, -0.263158, 0, -0.111612, 0, -0.314092, 0, 0.1, 0.3 )
light_color = Color( 0, 1, 0.635294, 1 )
light_energy = 0.8
omni_range = 2.0
omni_attenuation = 0.164941

[node name="RNC BL Sprite" type="Area" parent="CSGTorus/RNC BL Sprite"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CSGTorus/RNC BL Sprite/RNC BL Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.19209e-07, 0, 1, -0.00277972, -0.02632, -0.0414691 )
shape = SubResource( 2 )

[node name="RNC BR Sprite" type="Sprite3D" parent="CSGTorus"]
transform = Transform( 0.519615, 0, -0.5, 0, 0.038, 0, 0.3, 0, 0.866025, 1.45, 0.01, -2.45 )
texture = ExtResource( 4 )

[node name="OmniLight" type="OmniLight" parent="CSGTorus/RNC BR Sprite"]
transform = Transform( -0.523487, 0, 0.18602, 0, -0.263158, 0, -0.111612, 0, -0.314092, 0, 0.2, 0.3 )
light_color = Color( 0, 1, 0.635294, 1 )
light_energy = 0.8
omni_range = 2.0
omni_attenuation = 0.164941

[node name="RNC BR Sprite" type="Area" parent="CSGTorus/RNC BR Sprite"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CSGTorus/RNC BR Sprite/RNC BR Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.19209e-07, 0, 1, -0.00277972, -0.02632, -0.0414691 )
shape = SubResource( 2 )

[node name="RNC R Sprite" type="Sprite3D" parent="CSGTorus"]
transform = Transform( 0.587069, 0, 0.544639, 0, 0.038, 0, -0.381247, 0, 0.838671, -1.45, 0.01, -2.45 )
texture = ExtResource( 6 )

[node name="OmniLight" type="OmniLight" parent="CSGTorus/RNC R Sprite"]
transform = Transform( -0.455529, 0, 0.138747, 0, -0.263158, 0, -0.0971229, 0, -0.31887, 0, 0.2, 0.3 )
light_color = Color( 0, 1, 0.635294, 1 )
light_energy = 0.8
omni_range = 2.0
omni_attenuation = 0.164941

[node name="RNC R Sprite" type="Area" parent="CSGTorus/RNC R Sprite"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CSGTorus/RNC R Sprite/RNC R Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.19209e-07, 0, 1, -0.00277972, -0.02632, -0.0414691 )
shape = SubResource( 2 )

[node name="RNC L Sprite" type="Sprite3D" parent="CSGTorus"]
transform = Transform( -0.606218, 0, 0.5, 0, 0.038, 0, -0.35, 0, -0.866026, -1.45, 0.01, 2.45 )
texture = ExtResource( 7 )

[node name="OmniLight" type="OmniLight" parent="CSGTorus/RNC L Sprite"]
transform = Transform( -0.455529, 0, 0.138747, 0, -0.263158, 0, -0.0971229, 0, -0.31887, 0, 0.2, 0.3 )
light_color = Color( 0, 1, 0.635294, 1 )
light_energy = 0.8
omni_range = 2.0
omni_attenuation = 0.164941

[node name="RNC L Sprite" type="Area" parent="CSGTorus/RNC L Sprite"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CSGTorus/RNC L Sprite/RNC L Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 1.19209e-07, 0, 1, -0.00277972, -0.02632, -0.0414691 )
shape = SubResource( 2 )

[connection signal="body_entered" from="CSGTorus/RNC T Sprite/RNC T Sprite" to="." method="_on_RNC_T_Sprite_body_entered"]
[connection signal="body_entered" from="CSGTorus/RNC BL Sprite/RNC BL Sprite" to="." method="_on_RNC_BL_Sprite_body_entered"]
[connection signal="body_entered" from="CSGTorus/RNC BR Sprite/RNC BR Sprite" to="." method="_on_RNC_BR_Sprite_body_entered"]
[connection signal="body_entered" from="CSGTorus/RNC R Sprite/RNC R Sprite" to="." method="_on_RNC_R_Sprite_body_entered"]
[connection signal="body_entered" from="CSGTorus/RNC L Sprite/RNC L Sprite" to="." method="_on_RNC_L_Sprite_body_entered"]
